// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Label > renders correctly when disabled 1`] = `
<body>
  <div>
    <label
      class="relative group inline-flex grow text-sm font-normal leading-6 hover:underline hover:decoration-dotted text-gray-300 dark:text-gray-600"
      for="hello-world"
    >
      Hello, world!
      <div
        class="hidden group-hover:block absolute bottom-6 left-0 lg:-bottom-1 lg:-left-64 w-60 p-2 font-light text-gray-800 dark:text-gray-200 text-sm rounded-md bg-white dark:bg-gray-700 shadow-sm ring-1 ring-inset ring-gray-300 dark:ring-gray-600 z-10"
      >
        Non arcu tortor hac lorem mauris ultricies.
      </div>
    </label>
  </div>
</body>
`;

exports[`Label > renders correctly when enabled 1`] = `
<body>
  <div>
    <label
      class="relative group inline-flex grow text-sm font-normal leading-6 hover:underline hover:decoration-dotted text-gray-900 dark:text-gray-100"
      for="hello-world"
    >
      Hello, world!
      <div
        class="hidden group-hover:block absolute bottom-6 left-0 lg:-bottom-1 lg:-left-64 w-60 p-2 font-light text-gray-800 dark:text-gray-200 text-sm rounded-md bg-white dark:bg-gray-700 shadow-sm ring-1 ring-inset ring-gray-300 dark:ring-gray-600 z-10"
      >
        Non arcu tortor hac lorem mauris ultricies.
      </div>
    </label>
  </div>
</body>
`;

exports[`Label > uses label for htmlFor if missing 1`] = `
<body>
  <div>
    <label
      class="relative group inline-flex grow text-sm font-normal leading-6 hover:underline hover:decoration-dotted text-gray-900 dark:text-gray-100"
      for="Hello, world!"
    >
      Hello, world!
      <div
        class="hidden group-hover:block absolute bottom-6 left-0 lg:-bottom-1 lg:-left-64 w-60 p-2 font-light text-gray-800 dark:text-gray-200 text-sm rounded-md bg-white dark:bg-gray-700 shadow-sm ring-1 ring-inset ring-gray-300 dark:ring-gray-600 z-10"
      >
        Non arcu tortor hac lorem mauris ultricies.
      </div>
    </label>
  </div>
</body>
`;
